--- a/app/views/layouts/_content.html.haml
+++ b/app/views/layouts/_content.html.haml
@@ -46,7 +46,7 @@
               - if saved_report_paging?
                 = render(:partial => 'layouts/saved_report_paging_bar', :locals => {:pages => @sb[:pages]})
               - else
-                = render(:partial => '/layouts/x_pagingcontrols')
+                = render(:partial => 'layouts/x_pagingcontrols')
 
         - unless simulate
           .resizer.hidden-xs
@@ -92,7 +92,7 @@
                 .toolbar-pf-actions
                   - unless @embedded
                     - if @pages && @items_per_page != ONE_MILLION
-                      = render(:partial => '/layouts/pagingcontrols',
+                      = render(:partial => 'layouts/pagingcontrols',
                               :locals => {:pages      => @pages,
                                            :action_url => action_url_for_views,
                                            :db         => @view.db,
@@ -115,7 +115,7 @@
               .row
                 .col-md-12
                   %br
-                  = render :partial => '/layouts/tabs'
+                  = render :partial => 'layouts/tabs'
             .col-md-12
               .row
                 .col-md-12
@@ -145,12 +145,12 @@
                 .toolbar-pf-actions
                   - unless @embedded
                     - if @pages && @items_per_page != ONE_MILLION
-                      = render(:partial => '/layouts/pagingcontrols',
-                              :locals => {:pages      => @pages,
-                                           :action_url => action_url_for_views,
-                                           :db         => @view.db,
-                                           :headers    => @view.headers,
-                                           :button_div => 'center_tb'})
+                      = render(:partial => 'layouts/pagingcontrols',
+                               :locals  => {:pages      => @pages,
+                                            :action_url => action_url_for_views,
+                                            :db         => @view.db,
+                                            :headers    => @view.headers,
+                                            :button_div => 'center_tb'})
 
 - if show_advanced_search?
   :javascript
