--- a/app/views/layouts/_saved_report_paging_bar.html.haml
+++ b/app/views/layouts/_saved_report_paging_bar.html.haml
@@ -10,8 +10,14 @@
                 :items   => @sb[:pages][:items]}
 
     %div{:id => "rpb_div_#{@pb_occ}"}
-      %table{:border => "0", :cellpadding => "0", :cellspacing => "0", :width => "100%",
-            :style => "height: 30px; border: 1px solid #BAB9BA; border-width: 1px 1px 0px 1px; background: url(#{image_path('layout/teaserbarlg.png')}) repeat-x left bottom;"}
+      %table{:border => "0",
+             :cellpadding => "0",
+             :cellspacing => "0",
+             :width => "100%",
+             :style => ['height: 30px',
+                        'border: 1px solid #BAB9BA',
+                        'border-width: 1px 1px 0px 1px',
+                        "background: url(#{image_path('layout/teaserbarlg.png')}) repeat-x left bottom"].join('; ')}
         %tr
           %td{:valign => "middle"}
           %td{:valign => "middle", :align => "right"}
