--- a/app/assets/stylesheets/container_topology.css
+++ b/app/assets/stylesheets/container_topology.css
@@ -98,6 +98,22 @@ kubernetes-topology-icon svg {
   stroke-width: 2px;
 }
 
+.kube-topology g circle.Success {
+    stroke: #3F9C35;
+}
+
+.kube-topology g circle.Error {
+    stroke: #CC0000;
+}
+
+.kube-topology g circle.Warning {
+    stroke: #EC7A08;
+}
+
+.kube-topology g circle.Unknown {
+    stroke: #bbb;
+}
+
 .container_topology g.EntityLegend {
     transform: translate(21px,21px);
 }
