remove useless listicon_image in gtl partials

--- a/app/views/layouts/_gtl.html.haml
+++ b/app/views/layouts/_gtl.html.haml
@@ -1,4 +1,3 @@
-- listicon_image ||= nil
 - button_div ||= "center_tb"
 - rec_display = ""
 - no_rec_display = "display:none"
@@ -36,8 +35,7 @@
                             :action_url => action_url})
     - elsif @gtl_type == "list"
       = render(:partial => "layouts/gtl/list",
-               :locals  => {:table          => table,
-                            :button_div     => button_div,
-                            :view           => view,
-                            :action_url     => action_url,
-                            :listicon_image => listicon_image})
+               :locals  => {:table      => table,
+                            :button_div => button_div,
+                            :view       => view,
+                            :action_url => action_url})
