--- a/app/views/layouts/listnav/_compare_sections.html.haml
+++ b/app/views/layouts/listnav/_compare_sections.html.haml
@@ -53,7 +53,7 @@
             .flobj
               %img{:src => image_path("#{size}/base.png")}
             %div{:class => "flobj c#{size}"}
-              %img{:src => image_path("100/vendor-#{h(@drift_obj.vmm_vendor.downcase)}.png")}
+              %img{:src => image_path("100/vendor-#{h(@drift_obj.vmm_vendor_display.downcase)}.png")}
             - unless @drift_obj.power_state.blank?
               %div{:class => "flobj b#{size}"}
                 %img{:src => image_path("#{size}/currentstate-#{h(@drift_obj.power_state.downcase)}.png")}
@@ -64,7 +64,7 @@
             .flobj
               %img{:src => image_path("#{size}/base-single.png")}
             %div{:class => "flobj e#{size}"}
-              %img{:src => image_path("100/vendor-#{h(@host.vmm_vendor.downcase)}.png"), :width => "#{width * 1.8}", :height => "#{height * 1.8}"}
+              %img{:src => image_path("100/vendor-#{h(@host.vmm_vendor_display.downcase)}.png"), :width => "#{width * 1.8}", :height => "#{height * 1.8}"}
           - if @host.number_of(:get_policies) > 0
             %div{:class => "flobj g#{size}"}
               %img{:src => image_path('100/shield.png')}
