Fix #6310 pressing on refresh button didn't refresh topology

--- a/app/views/container_topology/show.html.haml
+++ b/app/views/container_topology/show.html.haml
@@ -6,8 +6,8 @@
           %input#box{'ng-change' => "show_hide_names(checkboxModel.value)",  'ng-model' => "checkboxModel.value", :type => "checkbox", 'ng-true-value' => 'true', 'ng-false-value' => 'false'}
           = _("Display Names")
         .form-group
-          %button.btn.btn-default
-            %i{'ng-click' => "refresh()", :class => "fa fa-refresh fa-lg"}
+          %button.btn.btn-default{'ng-click' => "refresh()"}
+            %i{:class => "fa fa-refresh fa-lg"}
             = _("Refresh")
         %form.search-pf.has-button{:role => "form"}
           .form-group.has-clear
