Corrected name of instance variable

--- a/app/views/host/_form.html.haml
+++ b/app/views/host/_form.html.haml
@@ -1,4 +1,4 @@
-- @angularForm = true
+- @angular_form = true
 
 .form-horizontal{:id => "start_form_div", :style => "display:none"}
   %form#form_div{"name"            => "angularForm",
