--- a/app/views/layouts/_x_edit_buttons.html.haml
+++ b/app/views/layouts/_x_edit_buttons.html.haml
@@ -1,5 +1,5 @@
-- if @angularForm
-  - @angularForm = false
+- if @angular_form
+  - @angular_form = false
   - return
 
 -# Set default action url, if none passed in
