--- a/app/views/ops/_diagnostics_database_tab.html.haml
+++ b/app/views/ops/_diagnostics_database_tab.html.haml
@@ -1,4 +1,4 @@
-- @angularForm = true
+- @angular_form = true
 
 %form#form_div.form-horizontal{:name                                  => "angularForm",
                               'ng-controller'                         => "diagnosticsDatabaseFormController",
