--- a/app/views/ops/_tenant_form.html.haml
+++ b/app/views/ops/_tenant_form.html.haml
@@ -1,4 +1,4 @@
-- @angularForm = true
+- @angular_form = true
 
 %form.form-horizontal#form_div{"name"          => "angularForm",
                                "ng-controller" => "tenantFormController",
