--- a/app/views/ops/_log_collection.html.haml
+++ b/app/views/ops/_log_collection.html.haml
@@ -1,4 +1,4 @@
-- @angularForm = true
+- @angular_form = true
 - div_num ||= ""
 
 %form.form-horizontal#form_div{:name                                 => "angularForm",
