call API.logout from login layout, API.autorenew from application layout

--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -19,3 +19,6 @@
         self.setTimeout("miqAjax('/dashboard/login_retry')",10000);
     - else
       = yield
+
+    :javascript
+      API.logout();
