--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,6 +40,7 @@
       :javascript
         ManageIQ.browser = "#{j browser_info(:name_ui)}";
         ManageIQ.controller = "#{j controller_name}";
+        API.autorenew();
 
       %style html, body{width:100%; height:100%; margin:0px; padding:0px; overflow:hidden;}
 
