--- a/app/views/chargeback/_cb_rate_show.html.haml
+++ b/app/views/chargeback/_cb_rate_show.html.haml
@@ -29,7 +29,7 @@
             %td.active{:colspan => "6"} &nbsp;
         %tr
           %td
-            = h(Dictionary.gettext(r[:group], :type => :rate_detail_group, :notfound => :titleize))
+            = h(rate_detail_group(r[:group]))
           %td
             = r[:description]
           %td{:align => "right"}
