--- a/app/assets/stylesheets/patternfly_overrides.scss
+++ b/app/assets/stylesheets/patternfly_overrides.scss
@@ -78,6 +78,12 @@
   margin-bottom: 1px;
 }
 
+/* styling for  report menu editor accordion */
+
+.panel-heading.active {
+  background: #ddd !important
+}
+
 /* Style changes applied when customer logo is active */
 
 nav.whitelabeled .navbar-header {
