--- a/app/views/layouts/_x_taskbar.html.haml
+++ b/app/views/layouts/_x_taskbar.html.haml
@@ -1,11 +1,10 @@
 #taskbar_buttons_div-x
   - defered_toolbar_render('history_tb', history_toolbar_filename)
   - defered_toolbar_render('center_tb', center_toolbar_filename)
-
   - if fname = custom_toolbar_filename
     - defered_toolbar_render('custom_tb', fname)
+  - defered_toolbar_render('view_tb', x_view_toolbar_filename)
 
-  = render :partial => "layouts/x_view_buttons"
   - unless request.xml_http_request?
     -# FIXME: do we need this condition?
     = render_toolbars
