Update dimensions and location of icons in topology after pf 2.9 upgrade

--- a/app/views/container_topology/show.html.haml
+++ b/app/views/container_topology/show.html.haml
@@ -50,7 +50,7 @@
           %g.EntityLegend.Containers
             %circle{:r => "17"}
             -# pficon-service
-            %text{:y => "8"} &#xE61E;
+            %text{:x => "-2", :y => "10"} &#xE61E;
         %label Services
       %kubernetes-topology-icon{:kind => "ContainerRoute", "tooltip-placement" => "bottom", "tooltip" => "{{legendTooltip}}"}
         %svg.kube-topology
