Increase font size of display names label in topology

--- a/app/assets/stylesheets/container_topology.css
+++ b/app/assets/stylesheets/container_topology.css
@@ -173,3 +173,7 @@ kubernetes-topology-icon svg {
    color : #0099cc;
    cursor: pointer;
 }
+
+.container_topology label.checkbox-inline {
+    font-size:14px;
+}
