--- a/app/views/ops/_ap_form_file.html.haml
+++ b/app/views/ops/_ap_form_file.html.haml
@@ -1,4 +1,7 @@
 %fieldset
+  - scan_id = "#{@scan.id || 'new'}"
+  - url = url_for(:action => 'ap_edit',
+                  :id     => scan_id)
   %h3= _("File Entry")
   %table.table.table-striped.table-bordered.table-hover
     %thead
@@ -7,25 +10,24 @@
         %th= _("Name")
         %th= _("Collect Contents?")
     %tbody
-      - scan_id = "#{@scan.id || 'new'}"
       - if !params[:add] && params[:add] != "new"
         %tr#new_tr{:title => _("Click to add a new entry"), :onclick => remote_function(:url => {:action => 'ap_ce_select', :add => 'new', :item => "file", :id => scan_id})}
           %td
-            .rollover
-              = image_tag(image_path('toolbars/new.png'), :class => "rollover small")
+            %button.btn.btn-default
+              %i.fa.fa-plus.fa-lg
           %td= _("<New Entry>")
           %td= _("<New Entry>")
       - else
         %tr#new_tr
           %td
-            .rollover
-              = image_submit_tag(image_path('toolbars/import.png'),
-                :class     => "rollover small",
-                :name      => "accept",
-                :alt       => _("Add this entry"),
-                :title     => _("Add this entry"),
-                :item_type => "file",
-                :id        => scan_id)
+            %button.btn.btn-default{:title => _("Add this entry"),
+              "data-submit"         => 'ap_form_div',
+              "data-miq_sparkle_on" => true,
+              :remote               => true,
+              "data-method"         => :post,
+              'data-click_url'      => {:url => "#{url}?accept=accept"}.to_json}
+              %i.fa.fa-plus.fa-lg
+
           %td
             = text_field("entry", "fname", :maxlength => MAX_NAME_LEN, :style => "width: 100%;")
             = hidden_field("item", "type1", :value => "file")
@@ -35,7 +37,8 @@
         - if session[:edit_filename] != entry["target"]
           %tr{:class => cycle('row0', 'row1'), :id => "#{entry['target']}_tr"}
             %td{:onclick => remote_function(:url => {:action => 'ap_ce_delete', :file_name => entry["target"], :id => scan_id}), :title => _("Click to delete this entry")}
-              = image_tag(image_path('toolbars/delete.png'), :class => "rollover small")
+              %button.btn.btn-default
+                %i.fa.fa-minus.fa-lg
             %td{:onclick => remote_function(:url => {:action => 'ap_ce_select', :file_name => entry["target"], :edit_entry => 'edit_file', :field => "fname", :id => scan_id}), :title => _("Click to update this entry")}
               = h(entry["target"])
             %td{:onclick => remote_function(:url => {:action => 'ap_ce_select', :file_name => entry["target"], :edit_entry => 'edit_file', :field => "fname", :id => scan_id}), :title => _("Click to update this entry")}
@@ -44,12 +47,13 @@
           - if params[:add] != "new"
             %tr{:class => cycle('row0', 'row1'), :id => "edit_tr"}
               %td
-                = image_submit_tag(image_path('toolbars/import.png'),
-                  :class => "rollover small",
-                  :name  => "accept",
-                  :alt   => t = _("Update this entry"),
-                  :title => t,
-                  :id    => scan_id)
+                %button.btn.btn-default{:title => _("Update this entry"),
+                  "data-submit"         => 'ap_form_div',
+                  "data-miq_sparkle_on" => true,
+                  :remote               => true,
+                  "data-method"         => :post,
+                  'data-click_url'      => {:url => "#{url}?accept=accept"}.to_json}
+                  %i.fa.fa-save.fa-lg
               %td
                 = text_field("entry", "fname", :maxlength => MAX_NAME_LEN, "value" => session[:edit_filename], :style => "width: 100%;")
                 = hidden_field("item", "type1", :value => "file")
