custom login background image tiling, instead of stretching

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -35,4 +35,5 @@ $login-container-details-border-color-rgba: rgba(0, 0, 0, 0.5);
 
 body.whitelabel {
   background: url($img-bg-login-whitelabel);
+  background-size: 100% auto;
 }
